dev/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    replicas: 5
    selector:
        matchLabels:
            app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - image: httpd
          name: nginx
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
