dev/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
    - name: traffic
      targetPort: 80
      port: 80
  selector:
    app: nginx
