dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx-knolx.devopscloud.link
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
